--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 /* Taken from getting started guide at: https://leafletjs.com/examples/quick-start/ */
-@import "https://unpkg.com/leaflet@1.7.1/dist/leaflet.css";
+@import "https://unpkg.com/leaflet@1.9.4/dist/leaflet.css";
 @import "https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap";
 
 /* These CSS variables are global, so they are available in all CSS modules */
@@ -25,9 +25,14 @@ html {
   font-size: 62.5%;
   box-sizing: border-box;
 }
-
+[data-emoji="flag"] {
+  font-family: "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji",
+    sans-serif;
+  font-size: 1.2em;
+}
 body {
-  font-family: "Manrope", sans-serif;
+  font-family: "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji",
+    sans-serif;
   color: var(--color-light--2);
   font-weight: 400;
   line-height: 1.6;
